style: 코드 포매팅 및 공백 정리